--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:              Clean Blog
-email:              your-email@example.com
+title:              Juhee Blog
+email:              wngml@hufs.ac.kr
 description:        A Blog Theme by Start Bootstrap
 author:             Start Bootstrap
 url:                "https://wngml02.github.io"
