--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Juhee Blog
 email:              wngml@hufs.ac.kr
-description:        A Blog Theme by Start Bootstrap
+description:        Welcome!
 author:             Start Bootstrap
 url:                "https://wngml02.github.io"
 
